--- a/Coarsening_Model.ipynb
+++ b/Coarsening_Model.ipynb
@@ -27,7 +27,7 @@
    "id": "88bd459c-3b17-427c-8fee-1d98e19063d5",
    "metadata": {},
    "source": [
-    "Simulated are full cells with multiple SCs, including nucleoplasmic exchange. The state variables of the system are the HEI10 concentration in the nucleoplasm [m_n], the HEI10 concentration along the SC [m_sc], which is divided by a grid, and the droplets of size [m_d] (and position [x_d]).\n",
+    "Simulated are full cells with multiple SCs, including nucleoplasmic exchange. The state variables of the system are the HEI10 concentration in the nucleoplasm `m_n`, the HEI10 concentration along the SC `m_sc`, which is divided by a grid, and the droplets of size `m_d` (and position `x_d`).\n",
     "\n",
     "First, define parameters of full model, based on non-dimensional model in the SI 2.A.1"
    ]
@@ -95,10 +95,10 @@
    "metadata": {},
    "source": [
     "Next, have a look at the initial conditions (Nucleoplasm, SC, droplets)\n",
-    "- sim1.m_n: Non-dimensional HEI10 concentration in the nucleoplasm, [ Sample index ]\n",
-    "- sim1.m_sc: Non-dimensional HEI10 concentration along each SC, [ Sample index ] x [ SC index ] x [ SC cell index ]\n",
-    "- sim1.m_d: Non-dimensional droplet sizes, [ Sample index ] x [ SC index ] x [ Droplet index ]\n",
-    "- sim1.x_d: Initial position the droplets along each SC, [ Time step index ] x [ Sample index ] x [ SC index ] x [ Droplet index ]"
+    "- `sim1.m_n`: Non-dimensional HEI10 concentration in the nucleoplasm, ( Sample index )\n",
+    "- `sim1.m_sc`: Non-dimensional HEI10 concentration along each SC, ( Sample index ) x ( SC index ) x ( SC cell index )\n",
+    "- `sim1.m_d`: Non-dimensional droplet sizes, ( Sample index ) x ( SC index ) x ( Droplet index )\n",
+    "- `sim1.x_d`: Initial position the droplets along each SC, ( Time step index ) x ( Sample index ) x ( SC index ) x ( Droplet index )"
    ]
   },
   {
@@ -156,13 +156,13 @@
    "id": "38e9c4ab-5975-4aa1-a439-dfda9be1a520",
    "metadata": {},
    "source": [
-    "The logged state variables for each time in t_log are now stored in the dictionary results = sim1.results\n",
+    "The logged state variables for each time in `t_log` are now stored in the dictionary `results = sim1.results`\n",
     "\n",
-    "- results['m_n_log'] Time-development of the non-dimensional HEI10 concentration in the nucleoplasm, [ Time step index ] x [ Sample index ]\n",
-    "- results['m_sc_log'] Time-development of the non-dimensional HEI10 concentration along each SC, [ Time step index ] x [ Sample index ] x [ SC index ] x [ SC cell index ]\n",
-    "- results['m_d_log'] Time-development of the non-dimensional droplet sizes, [ Time step index ] x [ Sample index ] x [ SC index ] x [ Droplet index ]\n",
-    "- results['x_d'] Initial position the droplets along each SC, [ Time step index ] x [ Sample index ] x [ SC index ] x [ Droplet index ]\n",
-    "- results['n_d_log'] Time-development of the number of remaining droplets (with droplet size >0), for each sample, SC at the times in t_log, [ Time step index ] x [ Sample index ] x [ SC index ]"
+    "- `results['m_n_log']` Time-development of the non-dimensional HEI10 concentration in the nucleoplasm, ( Time step index ) x ( Sample index )\n",
+    "- `results['m_sc_log']` Time-development of the non-dimensional HEI10 concentration along each SC, ( Time step index ) x ( Sample index ) x ( SC index ) x ( SC cell index )\n",
+    "- `results['m_d_log']` Time-development of the non-dimensional droplet sizes, ( Time step index ) x ( Sample index ) x ( SC index ) x ( Droplet index )\n",
+    "- `results['x_d']` Initial position the droplets along each SC, ( Time step index ) x ( Sample index ) x ( SC index ) x ( Droplet index )\n",
+    "- `results['n_d_log']` Time-development of the number of remaining droplets (with droplet size >0) for each SC, ( Time step index ) x ( Sample index ) x ( SC index )"
    ]
   },
   {
@@ -209,7 +209,7 @@
    "metadata": {},
    "source": [
     "Simulated is one SC, since all SCs exhibit independent behaviour.\n",
-    "The state variables of the system are the HEI10 concentration along the SC [m_sc], which is divided by a grid, and the droplets of size [m_d] (and position [x_d]).\n",
+    "The state variables of the system are the HEI10 concentration along the SC `m_sc`, which is divided by a grid, and the droplets of size `m_d` (and position `x_d`).\n",
     "\n",
     "First, define parameters of full model, based on non-dimensional model in the SI 2.A.1"
    ]
@@ -275,9 +275,9 @@
    "metadata": {},
    "source": [
     "Next, have a look at the initial conditions (SC, droplets)\n",
-    "- sim1.m_sc: Non-dimensional HEI10 concentration along each SC, [ Sample index ] x [ SC cell index ]\n",
-    "- sim1.m_d: Non-dimensional droplet sizes, [ Sample index ] x [ Droplet index ]\n",
-    "- sim1.x_d: Initial position the droplets along each SC, [ Time step index ] x [ Sample index ] x [ Droplet index ]"
+    "- `sim1.m_sc`: Non-dimensional HEI10 concentration along each SC, ( Sample index ) x ( SC cell index )\n",
+    "- `sim1.m_d`: Non-dimensional droplet sizes, ( Sample index ) x ( Droplet index )\n",
+    "- `sim1.x_d`: Initial position the droplets along each SC, ( Time step index ) x ( Sample index ) x ( Droplet index )"
    ]
   },
   {
@@ -311,12 +311,12 @@
    "id": "26b367c2-6853-4127-a98b-6aa2e7ccbb69",
    "metadata": {},
    "source": [
-    "The logged state variables for each time in t_log are now stored in the dictionary results = sim2.results\n",
+    "The logged state variables for each time in `t_log` are now stored in the dictionary `results = sim2.results`\n",
     "\n",
-    "- results['m_sc_log'] Time-development of the non-dimensional HEI10 concentration along each SC, [ Time step index ] x [ Sample index ] x [ SC cell index ]\n",
-    "- results['m_d_log'] Time-development of the non-dimensional droplet sizes, [ Time step index ] x [ Sample index ] x [ Droplet index ]\n",
-    "- results['x_d'] Initial position the droplets along each SC, [ Time step index ] x [ Sample index ] x [ Droplet index ]\n",
-    "- results['n_d_log'] Time-development of the number of remaining droplets (with droplet size >0), for each sample, SC at the times in t_log, [ Time step index ] x [ Sample index ]"
+    "- `results['m_sc_log']`: Time-development of the non-dimensional HEI10 concentration along each SC, ( Time step index ) x ( Sample index ) x ( SC cell index )\n",
+    "- `results['m_d_log']`: Time-development of the non-dimensional droplet sizes, ( Time step index ) x ( Sample index ) x ( Droplet index )\n",
+    "- `results['x_d']`: Initial position the droplets along each SC, ( Time step index ) x ( Sample index ) x ( Droplet index )\n",
+    "- `results['n_d_log']`: Time-development of the number of remaining droplets (with droplet size >0), for each SC, ( Time step index ) x ( Sample index )"
    ]
   },
   {
@@ -363,7 +363,7 @@
    "metadata": {},
    "source": [
     "Simulated is the nucleoplasm and droplets resembling the zyp1-mutant in Arabidopsis.\n",
-    "The state variables of the system are the HEI10 concentration in the nucleoplasm [m_n], and the droplet sizes [m_d]. Since the allocation of droplets to SCs and the positions are not affecting the time-development, they are not simulated.\n",
+    "The state variables of the system are the HEI10 concentration in the nucleoplasm `m_n`, and the droplet sizes `m_d`. Since the allocation of droplets to SCs and the positions are not affecting the time-development, they are not simulated.\n",
     "\n",
     "First, define parameters of full model, based on non-dimensional model in the SI 2.A.2"
    ]
@@ -425,9 +425,10 @@
    "metadata": {},
    "source": [
     "Next, have a look at the initial conditions (Nucleoplasm, droplets)\n",
-    "- sim1.m_n: Non-dimensional HEI10 concentration in the nucleoplasm, [ Sample index ]\n",
-    "- sim1.m_d: Non-dimensional droplet sizes, [ Sample index ] x [ Droplet index ]\n",
-    "- sim1.x_d: Initial position the droplets along each SC, [ Time step index ] x [ Sample index ] x [ Droplet index ]"
+    "\n",
+    "- `sim1.m_n`: Non-dimensional HEI10 concentration in the nucleoplasm, ( Sample index )\n",
+    "- `sim1.m_d`: Non-dimensional droplet sizes, ( Sample index ) x ( Droplet index )\n",
+    "- `sim1.x_d`: Initial position the droplets along each SC, ( Time step index ) x ( Sample index ) x ( Droplet index )"
    ]
   },
   {
@@ -461,12 +462,12 @@
    "id": "d40b499b-417d-442e-8437-611e8347b04d",
    "metadata": {},
    "source": [
-    "The logged state variables for each time in t_log are now stored in the dictionary results = sim3.results\n",
+    "The logged state variables for each time in `t_log` are now stored in the dictionary `results = sim3.results`\n",
     "\n",
-    "- results['m_n_log'] Time-development of the non-dimensional HEI10 concentration in the nucleoplasm, [ Time step index ] x [ Sample index ]\n",
-    "- results['m_d_log'] Time-development of the non-dimensional droplet sizes, [ Time step index ] x [ Sample index ]  x [ Droplet index ]\n",
-    "- results['x_d'] Initial position the droplets along each SC, [ Time step index ] x [ Sample index ] x [ Droplet index ]\n",
-    "- results['n_d_log'] Time-development of the number of remaining droplets (with droplet size >0), for each sample, SC at the times in t_log, [ Time step index ] x [ Sample index ]"
+    "- `results['m_n_log']`: Time-development of the non-dimensional HEI10 concentration in the nucleoplasm, ( Time step index ) x ( Sample index )\n",
+    "- `results['m_d_log']`: Time-development of the non-dimensional droplet sizes, ( Time step index ) x ( Sample index )  x ( Droplet index )\n",
+    "- `results['x_d']`: Initial position the droplets along each SC, ( Time step index ) x ( Sample index ) x ( Droplet index )\n",
+    "- `results['n_d_log']`: Time-development of the number of remaining droplets (with droplet size >0), for each SC, ( Time step index ) x ( Sample index )"
    ]
   },
   {
